[package]
name = "canvasbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bollard = "0.17"
futures = "0.3"
clap = { version = "4", features = ["derive", "color"] }
log = "0.4"
simple_logger = "5"
